Boton para prestamos pendientes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,15 @@
             </ion-label>
           </ion-item>
         </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item class="ion-item" lines="none">
+            <ion-icon name="language-outline"></ion-icon>
+            <ion-label>{{'CHANGELANGUAGE'| translate}}</ion-label>
+            <ion-select #langSelect (ionChange)="selectLanguage(langSelect.value)" [value]="translate.currentLang" okText="Ok" [cancelText]="'CANCEL'| translate">
+              <ion-select-option *ngFor="let language of languagesList" [value]="language.value">{{language.text}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-menu-toggle>
       </div>
     </ion-content>
     <ion-footer class="ion-no-border ion-padding">
