--- a/src/app/components/modals/change-password/change-password.component.html
+++ b/src/app/components/modals/change-password/change-password.component.html
@@ -1,7 +1,7 @@
 <ion-content class="background">
   <ion-card class="background" style="height: auto;">
     <ion-card-header>
-      <ion-card-title class="title">Cambiar contraseña</ion-card-title>
+      <ion-card-title class="title">{{'CHANGEPASS' | translate}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form [formGroup]="formChangePassword">
@@ -29,7 +29,7 @@
 
         </ion-list>
 
-        <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="changePassword()" expand="block">Cambiar contraseña</ion-button>
+        <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="changePassword()" expand="block">{{'CHANGEPASS' | translate}}</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
