--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Resetear contraseña"></app-header>
+<app-header [titulo]="'RESETPASS' | translate"></app-header>
 <ion-content class="background">
   <ion-card class="background margin-card" style="height: auto;">
     <ion-card-content>
@@ -10,10 +10,10 @@
           </ion-item>
           <app-validation-errors fieldName="nClient" [form]="formChangePassword.get('nClient')"></app-validation-errors>
           
-          <ion-button style="margin-bottom: 10%;" class="btn-round btn-success" (click)="sendCode()" expand="block">Enviar Código</ion-button>
+          <ion-button style="margin-bottom: 10%;" class="btn-round btn-success" (click)="sendCode()" expand="block">{{'SEND' | translate}} {{'CODE' | translate}}</ion-button>
 
           <ion-item class="input-item">
-            <ion-label position="floating">Código</ion-label>
+            <ion-label position="floating">{{'CODE' | translate}}</ion-label>
             <ion-input formControlName="code" type="text" inputmode="text" required></ion-input>
           </ion-item>
           <app-validation-errors [form]="formChangePassword.get('code')"></app-validation-errors>
@@ -40,7 +40,7 @@
 
         </ion-list>
 
-        <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="resetPassword()" expand="block">Cambiar contraseña</ion-button>
+        <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="resetPassword()" expand="block">{{'CHANGEPASS' | translate}}</ion-button>
         <ion-button class="btn-round btn-white"  routerLink="/login" expand="block">{{'CANCEL' | translate}}</ion-button>
       </form>
     </ion-card-content>
