--- a/src/app/components/modals/payment/payment.component.html
+++ b/src/app/components/modals/payment/payment.component.html
@@ -6,29 +6,29 @@
     <ion-grid class="padding-modal">
       <ion-row>
         <ion-col class="first-col" size="3">
-          <span class="subtitle-text">Jue</span><br>
-          <span class="card-day blue-day">6</span><br>
-          <span class="title-text">pagado</span><br><br>
+          <span class="subtitle-text">{{payment.fecha | date:'EEE' }}</span><br>
+          <span class="card-day blue-day">{{payment.fecha | date:'dd'}}</span><br>
+          <span class="title-text">{{'PAIDOUT' | translate}}</span><br><br>
           <span>{{payment.periodo}}/{{periodoTotal-1}}</span><br>
         </ion-col>
         <ion-col size="9">    
           <ion-item>
             <ion-label>
-              <p class="title-text">Saldo pendiente</p>
+              <p class="title-text">Saldo {{'PENDING' | translate}}</p>
               <p class="subtitle-text">{{payment.saldo_pendiente | currency}}</p>
             </ion-label>
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Fecha limite de pago</p>
+              <p class="title-text">{{'PAYDAYLIMIT' | translate}}</p>
               <p class="subtitle-text">{{payment.fecha | date:'EEEE dd/MM/yyyy'}}</p> 
             </ion-label>
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Numero de cuenta</p>
+              <p class="title-text">{{'NOACCOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.account_no}}</p>
             </ion-label>
           </ion-item>
@@ -43,28 +43,28 @@
         <ion-col class="first-col" size="3">
           <span class="subtitle-text">{{payment.fecha | date:'EEE' }}</span><br>
           <span class="card-day blue-day">{{payment.fecha | date:'dd'}}</span><br>
-          <span class="title-text">Sig. Pago</span><br><br>
+          <span class="title-text">{{'NEXTPAYMENT' | translate}}</span><br><br>
           <span>{{payment.periodo}}/{{periodoTotal-1}}</span><br>
-          <span>Pendiente</span><br>
+          <span>{{'PENDING' | translate}}</span><br>
         </ion-col>
         <ion-col size="9">    
           <ion-item>
             <ion-label>
-              <p class="title-text">Pago para no generar interes</p>
+              <p class="title-text">{{'AMOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.importe | currency}}</p>
             </ion-label> 
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Fecha limite de pago</p>
+              <p class="title-text">{{'PAYDAYLIMIT' | translate}}</p>
               <p class="subtitle-text">{{payment.fecha | date:'EEEE dd/MM/yyyy'}}</p> 
             </ion-label>
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Numero de cuenta</p>
+              <p class="title-text">{{'NOACCOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.account_no}}</p>
             </ion-label>
             <ion-icon routerLink="/references" slot="end" class="icon-card" name="qr-code-outline"></ion-icon>
@@ -80,28 +80,28 @@
         <ion-col class="first-col" size="3">
           <span class="subtitle-text">{{payment.fecha | date:'EEE' }}</span><br>
           <span class="card-day green-day">{{payment.fecha | date:'dd'}}</span><br>
-          <span class="title-text">Prox. Pago</span><br><br>
+          <span class="title-text">{{'NEXTPAY' | translate}}</span><br><br>
           <span>{{payment.periodo}}/{{periodoTotal-1}}</span><br>
-          <span>Pendiente</span><br>
+          <span>{{'PENDING' | translate}}</span><br>
         </ion-col>
         <ion-col size="9">    
           <ion-item>
             <ion-label>
-              <p class="title-text">Pago para no generar interes</p>
+              <p class="title-text">{{'AMOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.importe | currency}}</p>
             </ion-label> 
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Fecha limite de pago</p>
+              <p class="title-text">{{'PAYDAYLIMIT' | translate}}</p>
               <p class="subtitle-text">{{payment.fecha | date:'EEEE dd/MM/yyyy'}}</p> 
             </ion-label>
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Numero de cuenta</p>
+              <p class="title-text">{{'NOACCOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.account_no}}</p>
             </ion-label>
           </ion-item>
@@ -116,28 +116,28 @@
         <ion-col class="first-col" size="3">
           <span class="subtitle-text">{{payment.fecha | date:'EEE' }}</span><br>
           <span class="card-day red-day">{{payment.fecha | date:'dd'}}</span><br>
-          <span class="title-text">Pago atrasado</span><br><br>
+          <span class="title-text">{{'LATEPAYMENT' | translate}}</span><br><br>
           <span>{{payment.periodo}}/{{periodoTotal-1}}</span><br>
-          <span>Pendiente</span><br>
+          <span>{{'PENDING' | translate}}</span><br>
         </ion-col>
         <ion-col size="9">    
           <ion-item>
             <ion-label>
-              <p class="title-text">Pago para no generar interes</p>
+              <p class="title-text">{{'AMOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.importe | currency}}</p>
             </ion-label> 
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Fecha limite de pago</p>
+              <p class="title-text">{{'PAYDAYLIMIT' | translate}}</p>
               <p class="subtitle-text">{{payment.fecha | date:'EEEE dd/MM/yyyy'}}</p> 
             </ion-label>
           </ion-item>
   
           <ion-item>
             <ion-label>
-              <p class="title-text">Numero de cuenta</p>
+              <p class="title-text">{{'NOACCOUNT' | translate}}</p>
               <p class="subtitle-text">{{payment.account_no}}</p>
             </ion-label>
           </ion-item>
