--- a/src/app/pages/calendar/calendar.page.scss
+++ b/src/app/pages/calendar/calendar.page.scss
@@ -48,9 +48,31 @@
 .card-calendar{
     background-repeat: no-repeat !important;
     //background-size: cover !important;
-    width: 23.5rem;
-    height: 11.45rem;
+    width: 24.1rem;
+    height: 11.88rem;
     margin: auto;
+}
+
+.days-calendar{
+    min-height: 60px;
+    padding: 8px;
+}
+.blue-calendar{
+    background-color: #00A8FF;
+    color: white;
+}
+.red-calendar{
+    background-color: #EB3E41;
+    color: white;
+}
+.green-calendar{
+    background-color: #B1C800;
+    color: white;
+}
+
+.blue-boder-calendar{
+    border: solid 2px #00A8AE;
+    color: black;
 }
 
 ion-header.background{
