--- a/src/app/pages/detailloan/detailloan.page.html
+++ b/src/app/pages/detailloan/detailloan.page.html
@@ -68,6 +68,12 @@
     </ion-item>
     <ion-item lines="none">
       <ion-label>
+        <p>Recibos Pendientes</p>
+        <h2>{{recibo_total}}</h2>     
+      </ion-label>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label>
         <p>Tipo Plazo</p>
         <h2>{{tipo_plazo | translate}}</h2>     
       </ion-label>
