--- a/src/global.scss
+++ b/src/global.scss
@@ -197,3 +197,15 @@ calendar{
     --width: 90%;
     align-items: center;
 }
+
+
+.colorAlert{
+    color: red!important;
+  }
+
+.alertBody{
+    subHeader {
+        color: black;
+    }
+}
+  
