--- a/src/app/components/cards-loan/cards-loan.component.html
+++ b/src/app/components/cards-loan/cards-loan.component.html
@@ -8,7 +8,7 @@
             <p class="ion-text-left">{{item.saldo_total | currency}}</p>
             <h3 class="ion-text-left">SALDO PARA NO GENERAR INTERESES</h3>
             <p class="ion-text-left">{{item.saldo_vencido | currency}}</p>
-            <h3 class="ion-text-left">FECHA LÍMITE PAGO &nbsp;&nbsp;&nbsp;<ion-label class="date-limit">{{item.vencido_desde | date: 'EEEE'}}, {{item.vencido_desde | date: 'dd/MM/yyyy'}}</ion-label></h3>
+            <h3 *ngIf="item.status==300" class="ion-text-left">FECHA LÍMITE PAGO &nbsp;&nbsp;&nbsp;<ion-label class="date-limit">{{item.vencido_desde | date: 'EEEE'}}, {{item.vencido_desde | date: 'dd/MM/yyyy'}}</ion-label></h3>
           </ion-label>   
         </ion-label>
       </ion-card>
