--- a/src/app/pages/applyfor-loan/applyfor-loan.page.html
+++ b/src/app/pages/applyfor-loan/applyfor-loan.page.html
@@ -20,38 +20,49 @@
 
 <ion-content class="ion-content-color">
   <div style="position: relative;">
+    <form [formGroup]="formPrestamo">
     <div class="div-son-1">
       <ion-item lines="none">
-        <ion-input [value]="amount" type="number"></ion-input>
+        <ion-input formControlName="amount" [value]="amount|currency" >
+        </ion-input>
         <ion-icon class="pencil" slot="end" name="pencil"></ion-icon>
       </ion-item>
         <div class="text-label">
           <ion-label>Monto solicitado</ion-label>
         </div>
-        <ion-item class="ion-no-padding" lines="none" style="margin-top: -3px;">
-          <ion-range  color="success" min="500" max="3000" dualKnobs="true" pin="true" snaps="true" step="200" value="0"
-      (ionChange)="rangeChange($event)">
-    </ion-range>
+        <ion-item class="ion-no-padding" lines="none" style="margin-top: 5px;">
+        <ion-range mode="md"
+          [min]="amount_min" [max]="amount_max"
+           pin="true"
+          snaps="true" step="1000"
+          ticks="true" [value]="amount_min"
+          color="success"
+          (ionChange)="rangeChange($event)">
+            <ion-label style="color:#FFFF; font-size:.5rem" slot="start">{{amount_min}}</ion-label>
+            <ion-label style="color:#FFFF; font-size:.5rem" slot="end">{{amount_max}}</ion-label>
+        </ion-range>  
         </ion-item>
     </div>
     <div class="div-son-2"> 
-      <ion-item class="ion-select">
-        <ion-label class="i-success">Elija un Producto de Credito</ion-label>
-      <ion-select>
-        <ion-select-option value="p1">Producto 1</ion-select-option>
-        <ion-select-option value="p2">Producto 2</ion-select-option>
-        <ion-select-option value="p2">Producto 3</ion-select-option>
+    <ion-item class="ion-select">
+      <ion-label position="floating" class="i-success">Plazo deseado:</ion-label>
+      <ion-select [(ngModel)]="clear" (ionChange)="onPlazo($event)" formControlName="plazo">
+        <ion-select-option  *ngFor="let item of tiposPlazos; let i=index" value="{{i}}">{{item.valor}}</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item style="margin-top: 18px;" class="ion-select">
-      <ion-label class="i-success">Elija un Producto de Credito</ion-label>
-    <ion-select>
-      <ion-select-option value="p1">Producto 1</ion-select-option>
-      <ion-select-option value="p2">Producto 2</ion-select-option>
-      <ion-select-option value="p2">Producto 3</ion-select-option>
+      <ion-label position="floating" class="i-success">Frecuencia de Pago:</ion-label>
+    <ion-select (ionChange)="onPago($event)"  formControlName="pagos">
+      <ion-select-option *ngFor="let item of tipoFrecuencia; let i=index" value="{{i}}">{{item.valor}}</ion-select-option>
     </ion-select>
   </ion-item>
-  <ion-item lines="none" style="margin-top: 15px;" class="ion-select">
+  <ion-item style="margin-top: 18px;" class="ion-select">
+    <ion-label position="floating" class="i-success">Destino del Prestamo:</ion-label>
+  <ion-select (ionChange)="onDestino($event)" formControlName="destino">
+    <ion-select-option  *ngFor="let item of destionPrestamo" value="{{item.id}}">{{item.valor}}</ion-select-option>
+  </ion-select>
+</ion-item>
+  <!--<ion-item lines="none" style="margin-top: 15px;" class="ion-select">
     <ion-label>Duracion del Credito</ion-label>
   </ion-item>
   <ion-item lines="none" style="margin-top: -10px;" class="ion-select">
@@ -59,11 +70,11 @@
   </ion-item>
   <ion-item lines="none" style="margin-top: -10px;" class="ion-select">
     <ion-label>Fecha esperada del credito </ion-label>
-  </ion-item>
+  </ion-item>-->
     </div>
 
     <div class="div-son-3">
-      <ion-card [routerLink]="'home'" class="ion-card"  lines="none">
+      <ion-card button type="submit" [disabled]="!formPrestamo.valid" (click)="onEnviar()" class="ion-card"  lines="none">
         <ion-row>
           <ion-col class="col-1" size="3">
             <ion-icon class="cash" name="cash-outline"></ion-icon>
@@ -74,7 +85,7 @@
         </ion-row>
       </ion-card>
 
-      <ion-card [routerLink]="'/home'" class="ion-card-2"  lines="none">
+      <ion-card [disabled]="!formPrestamo.valid" (click)="presentAlertConfirm()" class="ion-card-2"  lines="none">
         <ion-row>
           <ion-col class="col-cancel-icon" size="3">
             <ion-icon class="icon-x" name="close-circle-outline"></ion-icon>
@@ -86,6 +97,7 @@
       </ion-card>
 
     </div>
+  </form>
   </div>
  
 </ion-content>
