--- a/src/app/pages/detailloan/detailloan.page.html
+++ b/src/app/pages/detailloan/detailloan.page.html
@@ -62,6 +62,12 @@
     </ion-item>
     <ion-item lines="none">
       <ion-label>
+        <p>Tipo Plazo</p>
+        <h2>{{tipo_plazo | translate}}</h2>     
+      </ion-label>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label>
         <p>Plazo</p>
         <h2>{{plazo}}</h2>     
       </ion-label>
@@ -74,11 +80,10 @@
     </ion-item>
     <ion-item lines="none">
       <ion-label>
-        <p>Tipo Plazo</p>
-        <h2>{{tipo_plazo | translate}}</h2>     
+        <p>Fecha Proximo Pago</p>
+        <h2>{{fecha_pago | date: 'dd/MM/yyyy'}}</h2>     
       </ion-label>
-    </ion-item>
-    
+    </ion-item>      
   </ion-list>
   <ion-list class="ion-padding">
     <ion-list-header>
