se agrando el modal de prestamo pendiente

--- a/src/app/components/modals/change-password/change-password.component.html
+++ b/src/app/components/modals/change-password/change-password.component.html
@@ -1,36 +1,39 @@
 <ion-content class="background">
-  <ion-card class="background" style="height: auto;">
-    <ion-card-header>
-      <ion-card-title class="title">{{'CHANGEPASS' | translate}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <form [formGroup]="formChangePassword">
-        <ion-list class="background" style="margin-bottom: 10%;">
-          <ion-item class="input-item">
-            <ion-label position="floating">{{'PASSWORD' | translate}}</ion-label>
-            <ion-input formControlName="password" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>  
-            <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
-          </ion-item>
-          <app-validation-errors fieldName="password" [form]="formChangePassword.get('password')"></app-validation-errors>
+  <div style="height: 100%; display: flex; align-items: center; justify-content: center;">
+    <ion-card class="background" style="width: 90%;height: 90%;">
+      <ion-card-header>
+        <ion-card-title class="title">{{'CHANGEPASS' | translate}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <form [formGroup]="formChangePassword">
+          <ion-list class="background" style="margin-bottom: 10%;">
+            <ion-item class="input-item">
+              <ion-label position="floating">{{'PASSWORD' | translate}}</ion-label>
+              <ion-input formControlName="password" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>  
+              <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
+            </ion-item>
+            <app-validation-errors fieldName="password" [form]="formChangePassword.get('password')"></app-validation-errors>
 
-          <ion-item class="input-item">
-            <ion-label position="floating">Nueva {{'PASSWORD' | translate}}</ion-label>
-            <ion-input formControlName="newpassword" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>
-            <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
-          </ion-item>
-          <app-validation-errors fieldName="password" [form]="formChangePassword.get('newpassword')"></app-validation-errors>
+            <ion-item class="input-item">
+              <ion-label position="floating">Nueva {{'PASSWORD' | translate}}</ion-label>
+              <ion-input formControlName="newpassword" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>
+              <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
+            </ion-item>
+            <app-validation-errors fieldName="password" [form]="formChangePassword.get('newpassword')"></app-validation-errors>
 
-          <ion-item class="input-item">
-            <ion-label position="floating">{{'COMFIRM' | translate}}</ion-label>
-            <ion-input id="confPassword" formControlName="password2" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>
-            <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
-          </ion-item>
-          <app-validation-errors [form]="formChangePassword.get('password2')"></app-validation-errors>
+            <ion-item class="input-item">
+              <ion-label position="floating">{{'COMFIRM' | translate}}</ion-label>
+              <ion-input id="confPassword" formControlName="password2" [type]="hide ? 'password' : 'text'" inputmode="text"></ion-input>
+              <ion-icon class="icono-centrado" (click)="hide = !hide" [name]="hide ? 'eye' : 'eye-off'" slot="end" ></ion-icon>
+            </ion-item>
+            <app-validation-errors [form]="formChangePassword.get('password2')"></app-validation-errors>
 
-        </ion-list>
+          </ion-list>
 
-        <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="changePassword()" expand="block">{{'CHANGEPASS' | translate}}</ion-button>
-      </form>
-    </ion-card-content>
-  </ion-card>
+          <ion-button class="btn-round btn-success" [disabled]="!formChangePassword.valid" (click)="changePassword()" expand="block">{{'CHANGEPASS' | translate}}</ion-button>
+        </form>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  
 </ion-content>
