Cambios Realizados se cambiaron los iconos, y se agregaron nuevos campos a solicitud de prestamo

--- a/src/app/pages/applyfor-loan/applyfor-loan.page.html
+++ b/src/app/pages/applyfor-loan/applyfor-loan.page.html
@@ -22,10 +22,10 @@
   <div style="position: relative;">
     <form [formGroup]="formPrestamo">
     <div class="div-son-1">
-      <ion-item lines="none">
+      <ion-item class="item" lines="none">
         <ion-input formControlName="amount" [value]="amount|currency" >
         </ion-input>
-        <ion-icon class="pencil" slot="end" name="pencil"></ion-icon>
+        <ion-img  style="max-width: 18px" src="/assets/img/icon/lapiz.svg"></ion-img>
       </ion-item>
         <div class="text-label">
           <ion-label>Monto solicitado</ion-label>
@@ -44,22 +44,29 @@
         </ion-item>
     </div>
     <div class="div-son-2"> 
-    <ion-item class="ion-select">
-      <ion-label position="floating" class="i-success">Plazo deseado:</ion-label>
-      <ion-select [(ngModel)]="clear" (ionChange)="onPlazo($event)" formControlName="plazo">
-        <ion-select-option  *ngFor="let item of tiposPlazos; let i=index" value="{{i}}">{{item.valor}}</ion-select-option>
+    <ion-item style="margin-top: 8.3rem;" class="ion-select">
+      <ion-label position="floating" class="i-success">Limite de Plazo:</ion-label>
+      <ion-select  formControlName="limitePlazo">
+        <ion-select-option value="{{plazo_min}}">{{plazo_min}}</ion-select-option>
+        <ion-select-option value="{{plazo_max}}">{{plazo_max}}</ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-item style="margin-top: 18px;" class="ion-select">
+    <ion-item style="margin-top: 12px;" class="ion-select">
+      <ion-label position="floating" class="i-success">Plazo deseado:</ion-label>
+      <ion-select [(ngModel)]="clear" (ionChange)="onPlazo($event)" formControlName="plazo">
+        <ion-select-option *ngFor="let item of tiposPlazos; let i=index" value="{{i}}">{{item.valor | uppercase}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item style="margin-top: 12px;" class="ion-select">
       <ion-label position="floating" class="i-success">Frecuencia de Pago:</ion-label>
     <ion-select (ionChange)="onPago($event)"  formControlName="pagos">
-      <ion-select-option *ngFor="let item of tipoFrecuencia; let i=index" value="{{i}}">{{item.valor}}</ion-select-option>
+      <ion-select-option *ngFor="let item of tipoFrecuencia; let i=index" value="{{i}}">{{item.valor | uppercase}}</ion-select-option>
     </ion-select>
   </ion-item>
-  <ion-item style="margin-top: 18px;" class="ion-select">
+  <ion-item style="margin-top: 12px;" class="ion-select">
     <ion-label position="floating" class="i-success">Destino del Prestamo:</ion-label>
   <ion-select (ionChange)="onDestino($event)" formControlName="destino">
-    <ion-select-option  *ngFor="let item of destionPrestamo" value="{{item.id}}">{{item.valor}}</ion-select-option>
+    <ion-select-option  *ngFor="let item of destionPrestamo" value="{{item.id}}">{{item.valor | uppercase}}</ion-select-option>
   </ion-select>
 </ion-item>
   <!--<ion-item lines="none" style="margin-top: 15px;" class="ion-select">
@@ -77,7 +84,7 @@
       <ion-card button type="submit" [disabled]="!formPrestamo.valid" (click)="onEnviar()" class="ion-card"  lines="none">
         <ion-row>
           <ion-col class="col-1" size="3">
-            <ion-icon class="cash" name="cash-outline"></ion-icon>
+            <ion-img class="cash" style="max-width: 27px;" src="/assets/img/icon/bolsa-money.svg"></ion-img>
           </ion-col>
           <ion-col class="col-2" size="9">
             <ion-text class="enviar">Enviar Solicitud de Crédito</ion-text>
@@ -88,7 +95,7 @@
       <ion-card [disabled]="!formPrestamo.valid" (click)="presentAlertConfirm()" class="ion-card-2"  lines="none">
         <ion-row>
           <ion-col class="col-cancel-icon" size="3">
-            <ion-icon class="icon-x" name="close-circle-outline"></ion-icon>
+            <ion-img class="icon-x" style="max-width: 25px;" src="/assets/img/icon/cerrar.svg"></ion-img>
           </ion-col>
           <ion-col class="col-cancel" size="9">
             <ion-text class="cancel">Cancelar</ion-text>
