--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,12 @@
     </ion-header>
     <ion-content scroll="false">
       <div class="spacing ion-padding">
-        <ion-menu-toggle *ngFor="let pages of navigate">
-          <ion-item class="ion-item" button (click)="onMenuUrl(pages.url)" lines="none">
-            <ion-icon [name]="pages.icon"></ion-icon>
+        <ion-menu-toggle *ngFor="let item of navigate">
+          <ion-item class="ion-item" button (click)="onMenuUrl(item.url)" lines="none">
+            <ion-img *ngIf="item.img" style="max-width: 30px;" src="/assets/img/icon/{{item.icon}}"></ion-img>
+            <ion-icon *ngIf="!item.img" [name]="item.icon"></ion-icon>
             <ion-label>
-              {{pages.title}} 
+              {{item.title}} 
             </ion-label>
           </ion-item>
         </ion-menu-toggle>
