--- a/src/app/components/modals/pending-loan/pending-loan.component.html
+++ b/src/app/components/modals/pending-loan/pending-loan.component.html
@@ -25,14 +25,14 @@
               <ion-item>
                 <ion-label>
                   <p class="title-text">{{'PAYMENTS' | translate}}</p>
-                  <p class="subtitle-text">{{payment.tipo_plazo}}</p> 
+                  <p class="subtitle-text">{{plazo | translate}}</p> 
                 </ion-label>
               </ion-item>
       
               <ion-item>
                 <ion-label style="white-space: break-spaces !important;">
                   <p class="title-text">{{'DESTINATION' | translate}}</p>
-                  <p class="subtitle-text">{{payment.proposito_description}}</p>
+                  <p class="subtitle-text">{{destino | translate}}</p>
                 </ion-label>
               </ion-item>
             </ion-col>
