Cambios de Alerta si tiene una solicitud Pendiente

--- a/src/app/pages/applyfor-loan/applyfor-loan.page.html
+++ b/src/app/pages/applyfor-loan/applyfor-loan.page.html
@@ -23,7 +23,7 @@
     <form [formGroup]="formPrestamo">
     <div class="div-son-1">
       <ion-item class="item" lines="none">
-        <ion-input formControlName="amount" [value]="amount|currency" >
+        <ion-input readonly formControlName="amount" [value]="amount|currency" >
         </ion-input>
         <ion-img  style="max-width: 18px" src="/assets/img/icon/lapiz.svg"></ion-img>
       </ion-item>
