--- a/src/app/components/cards-buttons/cards-buttons.component.html
+++ b/src/app/components/cards-buttons/cards-buttons.component.html
@@ -7,18 +7,18 @@
           <ion-icon  class="ion-icon-myaccounts"  name="card-outline"></ion-icon>
         </ion-card-header>
         <ion-card-content class="ion-text-center text-size no-padding">
-          Mis Cuentas
+          {{'MYACCOUNTS' | translate}}
         </ion-card-content>
       </ion-card>
     </ion-col>
     <ion-col class="col-separation"></ion-col>
     <ion-col>
-      <ion-card disabled="true" class="ion-card ion-card-qr" color="sectionbutton">
+      <ion-card routerLink="/references" class="ion-card ion-card-qr" color="sectionbutton">
         <ion-card-header class="ion-text-center ion-padding">
           <ion-icon class="ion-icon-qr" name="qr-code-sharp"></ion-icon>
         </ion-card-header>
         <ion-card-content  class="ion-text-center text-size text-qr no-padding">
-          Código de Barras y QR
+          {{'BARCODEANDQR' | translate}}
         </ion-card-content>
       </ion-card>
     </ion-col>
