--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
   <!-- Skeleton screen -->
-  <div *ngIf="!prestamos">
+  <div style="background-color: #FFFF;" *ngIf="!prestamos">
     <ion-header>
       <ion-toolbar class="toolbar-padding">
         <ion-avatar>
