--- a/src/app/pages/references/references.page.html
+++ b/src/app/pages/references/references.page.html
@@ -9,7 +9,7 @@
         <ion-col></ion-col>
         <ion-col>
           <ion-label class="center-label">
-            <ion-title style="color:white">{{titulo | translate}} </ion-title>
+            <ion-title style="color:white">{{'PAYMENTREFERENCES' | translate}} </ion-title>
           </ion-label>
         </ion-col>
         <ion-col></ion-col>
@@ -22,7 +22,7 @@
   <ion-toolbar>
     <ion-segment mode="md" [(ngModel)]="segment">
       <ion-segment-button isActive value="reembolsos">
-        <ion-label style="text-transform: capitalize;">Reembolsos</ion-label>
+        <ion-label style="text-transform: capitalize;">{{'REIMBURSEMENT' | translate}}</ion-label>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
