--- a/src/app/pages/request-received/request-received.page.html
+++ b/src/app/pages/request-received/request-received.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="padding">
   <ion-item lines="none" style="padding-top: 2rem;">
-    <ion-label class="msjrecibido"><strong>Hemos recibido tu Solicitud</strong></ion-label>
+    <ion-label class="msjrecibido"><strong>{{'RECIBIDO' | translate}}</strong></ion-label>
   </ion-item>
   <ion-item lines="none">
     <ion-avatar>
@@ -14,7 +14,7 @@
     </ion-avatar>
   </ion-item>
   <ion-item lines="none">
-    <ion-label class="msj">Nos pondremos en contacto contigo para <br> notificarte del estatus de tu Solicitud <br>Te enviaremos notificaciones a tu <br> aplicacion!</ion-label>
+    <ion-label class="msj">{{'CONTACT' | translate}} <br> {{'NOTIFICATION' | translate}} <br> {{'APPLICATION' | translate}} <br> {{'APLI' | translate}}!</ion-label>
   </ion-item>
-  <ion-button mode="ios" class="button" routerLink="/home" expand="block">Aceptar</ion-button>
+  <ion-button mode="ios" class="button" routerLink="/home" expand="block">{{'ACEPTAR' | translate}}</ion-button>
 </ion-content>
