--- a/src/app/pages/detailloan/detailloan.page.html
+++ b/src/app/pages/detailloan/detailloan.page.html
@@ -56,13 +56,13 @@
     </ion-item>
     <ion-item lines="none">
       <ion-label>
-        <p>{{'BALANCEDUE'}}</p>
+        <p>{{'BALANCEDUE' | translate}}</p>
           <h2>{{saldo_vencido|currency}}</h2>   
       </ion-label>
     </ion-item>
     <ion-item lines="none">
       <ion-label>
-        <p>{{'TERM'}}</p>
+        <p>{{'TERM' | translate}}</p>
         <h2>{{plazo}}</h2>     
       </ion-label>
     </ion-item>
