--- a/src/app/pages/request-received/request-received.page.html
+++ b/src/app/pages/request-received/request-received.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="padding">
-  <ion-item lines="none" style="padding-top: 2rem;">
+  <ion-item lines="none" style="padding-top: 2rem;float: center; text-align: center;">
     <ion-label class="msjrecibido"><strong>{{'RECIBIDO' | translate}}</strong></ion-label>
   </ion-item>
   <ion-item lines="none">
